Cambios en organización

--- a/Highlighter - Laboratorio.ipynb
+++ b/Highlighter - Laboratorio.ipynb
@@ -2,116 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import Counter\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('c:/Users/tomas/Documents/Programación/Github/Patricionog/Modulio/Readmes')\n",
-    "import Appio as ap\n",
-    "import Archivio as ac\n",
-    "import Databasio as bd\n",
-    "import Datetimio as dt\n",
-    "import Dictio as dc\n",
-    "import Excelio as ex\n",
-    "import Footio as ft\n",
-    "import Foragio as fg\n",
-    "import Framio as fr\n",
-    "import Graphio as gr\n",
-    "import Highlightio as hg\n",
-    "import Inputio as ip\n",
-    "import Listio as ls\n",
-    "import Mathio as mt\n",
-    "import Notio as nt\n",
-    "import Numbio as nb\n",
-    "import Numpio as nm\n",
-    "import Stringio as st\n",
-    "import Timio as tm\n",
-    "import Tkintio as tn\n",
-    "import Toolio as to"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['94', '1435', '1435', '18', '2022', '14', '10', '57']\n"
-     ]
-    }
-   ],
-   "source": [
-    "Text = '- La subrayado en la página 94 | posición 1435-1435 | Añadido el viernes, 18 de febrero de 2022 14:10:57'\n",
-    "\n",
-    "import re\n",
-    "\n",
-    "Resultado = re.findall(r\"\\d+\", Text)\n",
-    "print(Resultado)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[94.0, 1435.0, 1435.0, 18.0, 2022.0, 14.0, 10.0, 57.0]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def Extract_Numbers(Text):\n",
-    "    Resultado = re.findall(r\"\\d+\", Text)\n",
-    "    Resultado = [float(Element) for Element in Resultado]\n",
-    "\n",
-    "    return Resultado\n",
-    "\n",
-    "Extract_Numbers(Text)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -119,37 +9,194 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enero\n",
-      "febrero\n",
-      "marzo\n",
-      "abril\n",
-      "mayo\n",
-      "junio\n",
-      "julio\n",
-      "agosto\n",
-      "septiembre\n",
-      "octubre\n",
-      "noviembre\n",
-      "diciembre\n"
+      "Seleccioná el recorte con tus notas\n"
      ]
     }
    ],
    "source": [
-    "Months = {1: 'enero', \n",
-    "              2: 'febrero', \n",
-    "              3: 'marzo', \n",
-    "              4: 'abril', \n",
-    "              5: 'mayo', \n",
-    "              6: 'junio', \n",
-    "              7: 'julio', \n",
-    "              8: 'agosto', \n",
-    "              9: 'septiembre', \n",
-    "              10: 'octubre', \n",
-    "              11: 'noviembre', \n",
-    "              12: 'diciembre'}\n",
-    "    \n",
-    "for Index, Month in Months.items():\n",
-    "    print(Month)"
+    "# Textos de formularios.\n",
+    "from Formulario import *\n",
+    "\n",
+    "# Herramientas.\n",
+    "import Tools as t\n",
+    "\n",
+    "print(Explorer_Input_Title)\n",
+    "\n",
+    "def P_Start(All = False):\n",
+    "    # Seleccionar el File.\n",
+    "    File_Path = t.Select_File(Explorer_Input_Title, Filetypes_Tuples_Input)\n",
+    "\n",
+    "    if All:   \n",
+    "\n",
+    "        # Usario/Externo.\n",
+    "        # Hay que definir el procedimiento de esto.\n",
+    "        User = True \n",
+    "\n",
+    "        # Seleccionar idioma.\n",
+    "        # Hay que definir el procedimiento de esto.\n",
+    "        Language = 'Spanish'\n",
+    "\n",
+    "\n",
+    "        # Procesamiento del File.\n",
+    "        # Hay que definir esto en una función en Tools.\n",
+    "\n",
+    "        # if File_Language:\n",
+    "            # File_Proccesed = t.Proccess_File(File_Path, File_Language)\n",
+    "\n",
+    "            # if File_Proccesed = False:\n",
+    "            #    return File_Invalid_Alert\n",
+    "\n",
+    "\n",
+    "        # Seleccionar formato del Output.\n",
+    "        if User:\n",
+    "            Default_Output_Format = t.Choose_Option(Default_Output_Format_Options, \n",
+    "                                            Default_Output_Format_Messages[0],\n",
+    "                                            Default_Output_Format_Messages[1],\n",
+    "                                            Default_Output_Format_Messages[2],\n",
+    "                                            Default_Output_Format_Messages[3])\n",
+    "            \n",
+    "            if Default_Output_Format:\n",
+    "                Output_Format = 'pdf'\n",
+    "\n",
+    "        if User == False or Default_Output_Format == False:\n",
+    "            Output_Format = t.Choose_Option(Output_Format_Options, \n",
+    "                                            Output_Format_Messages[0],\n",
+    "                                            Output_Format_Messages[1],\n",
+    "                                            Output_Format_Messages[2],\n",
+    "                                            Output_Format_Messages[3])   \n",
+    "\n",
+    "\n",
+    "        # ¿Son formateables los bloques?\n",
+    "        Block_Formateable = ('pdf' in Output_Format or 'docx' in Output_Format or 'doc' in Output_Format)\n",
+    "\n",
+    "\n",
+    "        # Seleccionar la partición del Output.\n",
+    "        if User:\n",
+    "            Default_Output_Partition = t.Choose_Option(Default_Output_Partition_Options, \n",
+    "                                                    Default_Output_Partition_Messages[0],\n",
+    "                                                    Default_Output_Partition_Messages[1],\n",
+    "                                                    Default_Output_Partition_Messages[2],\n",
+    "                                                    Default_Output_Partition_Messages[3])\n",
+    "            \n",
+    "            if Default_Output_Partition:\n",
+    "                Output_Partition = True\n",
+    "\n",
+    "        if User == False or Default_Output_Partition == False:\n",
+    "            Output_Partition = t.Choose_Option(Output_Partition_Options, \n",
+    "                                            Output_Partition_Messages[0],\n",
+    "                                            Output_Partition_Messages[1],\n",
+    "                                            Output_Partition_Messages[2],\n",
+    "                                            Output_Partition_Messages[3])\n",
+    "\n",
+    "        if Output_Partition:\n",
+    "            Output_Partition_Criterion = t.Choose_Option(Output_Partition_Criterion_Options, \n",
+    "                                            Output_Partition_Criterion_Messages[0],\n",
+    "                                            Output_Partition_Criterion_Messages[1],\n",
+    "                                            Output_Partition_Criterion_Messages[2],\n",
+    "                                            Output_Partition_Criterion_Messages[3])\n",
+    "\n",
+    "\n",
+    "        # Seleccionar Path del Output.\n",
+    "        if User:\n",
+    "            Default_Output_Path = t.Choose_Option(Default_Output_Path_Options, \n",
+    "                                                    Default_Output_Path_Messages[0],\n",
+    "                                                    Default_Output_Path_Messages[1],\n",
+    "                                                    Default_Output_Path_Messages[2],\n",
+    "                                                    Default_Output_Path_Messages[3])\n",
+    "            \n",
+    "            if Default_Output_Path:\n",
+    "                Output_Path = 'c:/Users/tomas/Documents/Programación/Universidad/Patricionog/Highlights/'\n",
+    "\n",
+    "        if User == False or Default_Output_Path == False:\n",
+    "            Output_Path = t.Select_Directory(Explorer_Output_Title)\n",
+    "\n",
+    "\n",
+    "        # ¿Usar Matchs por defecto?\n",
+    "        if User:\n",
+    "            Default_Match = t.Choose_Option(Default_Match_Options, \n",
+    "                                            Default_Match_Messages[0],\n",
+    "                                            Default_Match_Messages[1],\n",
+    "                                            Default_Match_Messages[2],\n",
+    "                                            Default_Match_Messages[3])\n",
+    "\n",
+    "        # Agregar opciones por si no es usuario o si es pero no elige por defecto.\n",
+    "\n",
+    "\n",
+    "        # ¿Usar Processing por defecto?\n",
+    "        if User:\n",
+    "            Default_Proccesing = t.Choose_Option(Default_Processing_Options, \n",
+    "                                                Default_Processing_Messages[0],\n",
+    "                                                Default_Processing_Messages[1],\n",
+    "                                                Default_Processing_Messages[2],\n",
+    "                                                Default_Processing_Messages[3])\n",
+    "\n",
+    "        # Agregar opciones por si no es usuario o si es pero no elige por defecto.\n",
+    "\n",
+    "\n",
+    "        # Seleccionar estilo del Block.\n",
+    "        if User and Block_Formateable:\n",
+    "            Default_Block_Style = t.Choose_Option(Default_Block_Style_Options, \n",
+    "                                                Default_Block_Style_Messages[0],\n",
+    "                                                Default_Block_Style_Messages[1],\n",
+    "                                                Default_Block_Style_Messages[2],\n",
+    "                                                Default_Block_Style_Messages[3])\n",
+    "            \n",
+    "            Default_Naming = t.Choose_Option(Default_Naming_Options, \n",
+    "                                                Default_Naming_Messages[0],\n",
+    "                                                Default_Naming_Messages[1],\n",
+    "                                                Default_Naming_Messages[2],\n",
+    "                                                Default_Naming_Messages[3])\n",
+    "            \n",
+    "\n",
+    "        if (User == False or Default_Block_Style == False) and Block_Formateable:\n",
+    "            \n",
+    "            Block_Style = t.Choose_Option(Block_Style_Options, \n",
+    "                                            Block_Style_Messages[0],\n",
+    "                                            Block_Style_Messages[1],\n",
+    "                                            Block_Style_Messages[2],\n",
+    "                                            Block_Style_Messages[3])\n",
+    "            \n",
+    "            Highlight_Font_Style = t.Choose_Option(Highlight_Font_Style_Options, \n",
+    "                                                Highlight_Font_Style_Messages[0],\n",
+    "                                                Highlight_Font_Style_Messages[1],\n",
+    "                                                Highlight_Font_Style_Messages[2],\n",
+    "                                                Highlight_Font_Style_Messages[3])\n",
+    "\n",
+    "            # Highlight_Font = show_message(\"Fuente de Resaltado\", Highlight_Font_Message)\n",
+    "            \n",
+    "            Subline_Font_Style = t.Choose_Option(Subline_Font_Style_Options, \n",
+    "                                            Subline_Font_Style_Messages[0],\n",
+    "                                            Subline_Font_Style_Messages[1],\n",
+    "                                            Subline_Font_Style_Messages[2],\n",
+    "                                            Subline_Font_Style_Messages[3])\n",
+    "            \n",
+    "            Highlight_Font = input(Highlight_Font_Message)\n",
+    "            Subline_Font = input(Subline_Font_Message)\n",
+    "\n",
+    "            Highlight_Color = input(Highlight_Color_Message)\n",
+    "            Subline_Color = input(Subline_Color_Message)\n",
+    "\n",
+    "            Highlight_Font_Size = input(Highlight_Font_Size_Message)\n",
+    "            Subline_Font_Size = input(Subline_Font_Size_Message)\n",
+    "\n",
+    "            Highlight_Align = t.Choose_Option(Highlight_Align_Options, \n",
+    "                                            Highlight_Align_Messages[0],\n",
+    "                                            Highlight_Align_Messages[1],\n",
+    "                                            Highlight_Align_Messages[2],\n",
+    "                                            Highlight_Align_Messages[3])\n",
+    "            \n",
+    "            Subline_Align = t.Choose_Option(Subline_Align_Options, \n",
+    "                                            Subline_Align_Messages[0],\n",
+    "                                            Subline_Align_Messages[1],\n",
+    "                                            Subline_Align_Messages[2],\n",
+    "                                            Subline_Align_Messages[3])\n",
+    "\n",
+    "        # Agregar opciones por si no es usuario o si es pero no elige por defecto.\n",
+    "\n",
+    "\n",
+    "        # Nombrar Output.\n",
+    "        if Output_Partition_Options == False:\n",
+    "            Output_Name = input(Naming_Message)"
    ]
   },
   {
